# IOTManagementSystem

./: .gitignore  CHANGELOG.md  IoTMSystem.postman_collection.json  README.md  installer.sh  testInst.sh  uninstall.sh
Backend/APIHandle/: iotm-b.tar  package.json
Backend/APIHandle/src/: .prettierrc  app.js
Backend/APIHandle/src/routes/: index.js
Documentation/: Architecture Diagram.drawio.xml
RPiClient/: MQTTHandler.py  config.py  fw.py  main.py  starter.sh  systemData.py  testFW.py  upgradeOS.sh
RPiClient-rs/: Cargo.toml  Dockerfile  RPiClient-rs-user-script.service  RPiClient-rs.service  client-tool.sh  compile.sh  d.txt  ota.sh  update-services.sh  updateFW.sh  upgradeOS.sh  user-script.sh  x-compile.sh
RPiClient-rs/.cargo/: config
RPiClient-rs/RPi-release/: client-tool.sh  updateFW.sh  user-script.sh
RPiClient-rs/data/: errorLogs.txt
RPiClient-rs/src/: main.rs
WebApp/Backend/: backen.tar  backend.tar  package.json
WebApp/Backend/src/: index.ts
WebApp/Backend/src/controllers/: auth.controller.ts  counts.controller.ts  macAddress.controller.ts  mqtt.controller.ts  script.controller.ts  url.controller.ts
WebApp/Backend/src/database/: index.ts
WebApp/Backend/src/libraries/: mqtt.ts  multer.ts  nodemailer.ts
WebApp/Backend/src/middlewares/: validator.middleware.ts
WebApp/Backend/src/models/: file.model.ts  index.ts  mqtt.model.ts  script.model.ts  (+3 more)
WebApp/Frontend/: package.json
WebApp/Frontend/public/: index.html
WebApp/Frontend/src/: App.js  index.js
deprecated/: README.md
deprecated/Backend/APIHandle/: build.sh  captain-definition
(+50 files in other folders)
