[package]
name = "RPiClient-rs"
version = "0.1.0"
edition = "2021"
authors = "Nauman Shakir"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.11"
env_logger = "0.7"
futures = "0.3.23"
async-std = "1.12.0"
tokio = {version = "1.20.1", features = ["full"] }
reqwest = "0.11.11"
mac_address = "1.1.3"
rand = "0.8.5"

